v0.6/guides/validation/creating-validators.mdx
---
title: "Creating Validators"
description: "Author reusable, type-safe validator classes with BaseValidator."
icon: "pen-to-square"
---

Validators are classes that extend `BaseValidator`. Each schema is a static getter,
so you can reference it directly (for example `UserValidator.store`) without instantiating the class.

## Generating a validator

```bash
bun ace make:validator UserValidator
```

This creates `app/validators/UserValidator.ts` with resource-style schemas.

## Defining schemas

`super.validator` is the Vine.js root. There are two equivalent ways to define a schema.

<CodeGroup>
    ```ts create()
    import BaseValidator from "@bejibun/core/bases/BaseValidator";

    export default class UserValidator extends BaseValidator {
        public static get store(): Bejibun.Validator {
            return super.validator.create({
                name: super.validator.string()
            });
        }
    }
    ```

    ```ts compile(object())
    import BaseValidator from "@bejibun/core/bases/BaseValidator";

    export default class UserValidator extends BaseValidator {
        public static get store(): Bejibun.Validator {
            return super.validator.compile(
                super.validator.object({
                    name: super.validator.string()
                })
            );
        }
    }
    ```

</CodeGroup>

## A full validator

Group every action's schema in one class:

```ts app/validators/UserValidator.ts
import BaseValidator from "@bejibun/core/bases/BaseValidator";
import UserModel from "@/app/models/UserModel";

export default class UserValidator extends BaseValidator {
    public static get show(): Bejibun.Validator {
        return super.validator.create({
            id: super.validator.number().min(1).exists(UserModel, "id")
        });
    }

    public static get store(): Bejibun.Validator {
        return super.validator.create({
            name: super.validator.string()
        });
    }

    public static get update(): Bejibun.Validator {
        return super.validator.create({
            id: super.validator.number().min(1).exists(UserModel, "id"),
            name: super.validator.string()
        });
    }

    public static get destroy(): Bejibun.Validator {
        return super.validator.create({
            id: super.validator.number().min(1).exists(UserModel, "id")
        });
    }
}
```

<Tip>
    Optional, nullable fields are expressed with Vine modifiers:

    ```ts
    search: super.validator.string().nullable().optional()
    ```

</Tip>
